# opengl_sdl2

./: .clang-format  .gitmodules  CMakeLists.txt
shaders/: frag.glsl  frag_ball.glsl  frag_lamp.glsl  vert.glsl  vert_ball.glsl  vert_lamp.glsl
src/: Application.cpp  Application.hpp  CApp.cpp  CApp.h  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp  CApp_OnLoop.cpp  CApp_OnRender.cpp  Camera.cpp  Camera.h  MainWindow.cpp  MainWindow.hpp  Page.hpp  application.cpp  application.h  main.cpp  main_window.cpp  main_window.h
src/GameObjects/: Ball.cpp  Ball.hpp  Camera.cpp  Camera.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  ResourceStorage.cpp  ResourceStorage.hpp  Sprite.cpp  Sprite.hpp
src/Pages/: GamePage.cpp  GamePage.hpp  Page.hpp
src/RenderDevice/: RenderDevice.cpp  RenderDevice.hpp
src/pages/: GamePage.cpp  GamePage.hpp  Page.hpp
